@@ -34,6 +34,7 @@ New Features:
   * Add support for the Caché database (dprekker).
   * Add an option to treat capitalized and lowercase topic names as a single
     record.  For example, "Topic" and "topic" would refer to the same topic.
+  * Display pagination options when viewing topic categories.
   * Reduce the amount of parsing the must be done when importing topics in
     order to improve performance.
   * Remove ability to automatically upgrade from versions prior to 0.8.0.
